--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="el">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Πακέτο 3: Ψηφιακός και πολυτροπικός γραμματισμός</title>
+    <style>
+        body {font-family: 'Comfortaa', sans-serif; background-color: black; color: #fff; text-align: center; margin: 0; padding: 0;}
+        h1 {background-color: black; color: gold; padding: 20px; font-size: 25px;}
+        .creator, .director {background-color: black; color: gold; padding: 10px; font-size: 18px;}
+        .emojis {font-size: 30px; margin-top: 20px;}
+        .score-box {position: absolute; top: 20px; right: 20px; font-size: 20px; font-weight: bold;}
+        .question-container {margin: 30px; max-width: 800px; margin: auto; text-align: left;}
+        .question {margin: 15px 0; padding: 15px; font-size: 120%; background-color: #0b3d91; color: gold; border-radius: 10px; font-weight: bold; text-shadow: 1px 1px 0 rgba(0,0,0,0.8), -1px -1px 0 rgba(255,255,255,0.2);}
+        .question-number {text-decoration: underline; display: block; margin-bottom: 5px;}
+        .answer {font-size: 18px; margin: 5px 0; padding: 10px; border-radius: 5px; cursor: pointer; background-color: #777; color: white; border: none; width: 100%;}
+        .answer:hover {background-color: #999;}
+        .correct {background-color: green !important;}
+        .incorrect {background-color: red !important;}
+        .final-score {font-size: 24px; color: gold; margin-top: 20px;}
+    </style>
+</head>
+<body>
+    <div class="creator">Δημιουργία/Επιμέλεια: Παναγιώτης Δόμβρος (CC BY-NC)</div>
+    <div class="director">Εκπαιδευτικός Αγγλικών - Θεατρολόγος</div>
+    <div class="director">Επιμορφωτής Τ.Π.Ε</div>
+    <div class="director">Διευθυντής 1ου Γυμνασίου Πυλαίας</div>
+    <h1>Πακέτο 3: Ψηφιακός και πολυτροπικός γραμματισμός</h1>
+    <div class="emojis">💻 📚 🎓 🌐</div>
+    <div class="score-box">Σκορ: <span id="score">0</span> / 100</div>
+    <div class="question-container" id="question-container"></div>
+    <audio id="successAudio" src="success-sound.mp3"></audio>
+    <audio id="failAudio" src="fail-sound.mp3"></audio>
+    <script>
+        const questions = [
+            {q:'Ποια θεώρηση του γραμματισμού τον ορίζει ως κοινωνική πρακτική ενσωματωμένη σε πλαίσια πολιτισμικά και εξουσιαστικά;', a:['α) Αυτόνομο μοντέλο','β) Ιδεολογικό μοντέλο','γ) Μοντέλο των τεσσάρων πόρων'], c:1},
+            {q:'Ποιος όρος περιγράφει την ικανότητα να κατανοούμε και να παράγουμε εικόνες;', a:['α) Πληροφοριακός γραμματισμός','β) Οπτικός γραμματισμός','γ) Ψηφιακός γραμματισμός'], c:1},
+            {q:'Στο μοντέλο των τεσσάρων πόρων, ποιος πόρος αφορά την κριτική ανάλυση των κειμένων;', a:['α) Code breaker','β) Text user','γ) Text analyst'], c:2},
+            {q:'Ποιο από τα παρακάτω χαρακτηρίζει την υπερκειμενικότητα;', a:['α) Χρήση μόνο κειμένου χωρίς εικόνες','β) Δομή με υπερσυνδέσμους και μη γραμμική ανάγνωση','γ) Αποκλειστικά έντυπα κείμενα'], c:1},
+            {q:'Στην παιδαγωγική των πολυγραμματισμών, ποια φάση εστιάζει στην παραγωγή νέων κειμένων από τους μαθητές;', a:['α) Situated Practice','β) Critical Framing','γ) Transformed Practice'], c:2},
+            {q:'Ποια από τις παρακάτω δεν είναι φάση της παιδαγωγικής των πολυγραμματισμών;', a:['α) Situated Practice','β) Overt Instruction','γ) Linear Lecture'], c:2},
+            {q:'Τι σημαίνει «browsing» στην ψηφιακή ανάγνωση;', a:['α) Οργάνωση εγγράφων σε φακέλους','β) Γραμμική ανάγνωση από την αρχή ως το τέλος','γ) Επιλεκτική, κατά επίπεδα ανάγνωση υπερκειμένου'], c:2},
+            {q:'Ποιος πόρος του μοντέλου Luke & Freebody αφορά στη λειτουργική χρήση κειμένων για συγκεκριμένους σκοπούς;', a:['α) Text participant','β) Text user','γ) Code breaker'], c:1},
+            {q:'Η έννοια των «νέων γραμματισμών» υπογραμμίζει κυρίως:', a:['α) Την κλασική εξάσκηση γραμματικής','β) Την επίδραση των ψηφιακών τεχνολογιών και τις νέες δεξιότητες','γ) Τον αποκλειστικό έλεγχο των κειμένων από το σχολείο'], c:1},
+            {q:'Τι ορίζει ο Freire ως «ανάγνωση του κόσμου»;', a:['α) Μόνο την αποκωδικοποίηση γραπτών κειμένων','β) Την ερμηνεία του κοινωνικού πλαισίου πριν από το κείμενο','γ) Την αποστήθιση λέξεων'], c:1},
+            {q:'Στο παράδειγμα διδασκαλίας που στηρίζεται στον γραμματισμό, τι φέρνουν οι μαθητές στην τάξη;', a:['α) Μόνο το βιβλίο του μαθήματος','β) Επιστολές και φωτογραφίες από Γάλλους μαθητές','γ) Ασκήσεις λεξιλογίου σε κουπόνια'], c:1},
+            {q:'Ποιο μέσο ΔΕΝ ανήκει στα ψηφιακά μέσα πρακτικής γραμματισμού;', a:['α) ΑΤΜ','β) Ραδιοφωνικός δέκτης χωρίς σύνδεση στο διαδίκτυο','γ) E-ticket αεροπορικής πτήσης'], c:1},
+            {q:'Τι είναι η «δικτυογλώσσα» (netspeak);', a:['α) Παραδοσιακή γραμματική ελληνικών κειμένων','β) Νέα ποικιλία γλώσσας σε τεχνολογικά διαμεσολαβημένα περιβάλλοντα','γ) Λογοτεχνική γλώσσα'], c:1},
+            {q:'Στο μοντέλο των τεσσάρων πόρων, ποιος πόρος αφορά στην αποκωδικοποίηση συμβάσεων;', a:['α) Code breaker','β) Text analyst','γ) Text user'], c:0},
+            {q:'Η πολυτροπικότητα συνδέεται με:', a:['α) Μόνο τη γλώσσα χωρίς εικόνες','β) Πολυδιάστατα modes (γλώσσα, εικόνα, ήχο κ.ά.)','γ) Αποκλειστικά έντυπη παρουσίαση'], c:1},
+            {q:'Τι εννοούμε με τον όρο «Situated Practice»;', a:['α) Γραμμική διδασκαλία γραμματικής','β) Αξιοποίηση εμπειριών μαθητών με αυθεντικά κείμενα καθημερινής ζωής','γ) Μόνο αξιολόγηση τεστ'], c:1},
+            {q:'Στο παράδειγμα μύθων, ποια δραστηριότητα αφορά τον ρόλο του «text user»;', a:['α) Εντοπισμός ρημάτων στον μύθο','β) Σχεδιασμός και αφήγηση δικού τους μύθου','γ) Καταιγισμός ιδεών'], c:1},
+            {q:'Ποια είναι η πρώτη φάση της παιδαγωγικής των πολυγραμματισμών;', a:['α) Transformed Practice','β) Situated Practice','γ) Critical Framing'], c:1},
+            {q:'Ποιο στοιχείο ΔΕΝ ανήκει στον ψηφιακό γραμματισμό;', a:['α) Αναζήτηση και φιλτράρισμα πληροφοριών','β) Χρήση χειρόγραφης έκθεσης','γ) Επιμέλεια ψηφιακού περιεχομένου'], c:1},
+            {q:'Σε ποια ενότητα περιγράφεται η μετάβαση από αυτόνομο σε κοινωνικό μοντέλο γραμματισμού;', a:['α) 3.1','β) 3.4','γ) 3.8'], c:0},
+            {q:'Ποιο μοντέλο αναπτύχθηκε στην Αυστραλία τη δεκαετία του 1990;', a:['α) Μοντέλο των τεσσάρων πόρων','β) Ιδεολογικό μοντέλο γραμματισμού','γ) Πολιτισμικός γραμματισμός'], c:0},
+            {q:'Τι σημαίνει «Overt Instruction»;', a:['α) Κρυφή διδασκαλία','β) Εμφανής διδασκαλία μεταγλώσσας','γ) Αυτόνομη μελέτη'], c:1},
+            {q:'Ποια ενότητα αναφέρεται στο «μοντέλο των τεσσάρων πόρων»;', a:['α) 3.2','β) 3.5','γ) 3.9'], c:1},
+            {q:'Η κριτική πλαισίωση (Critical Framing) αφορά:', a:['α) Μόνο την αξιολόγηση παραδοσιακών κειμένων','β) Ανάλυση συνεπειών και ιδεολογιών των κειμένων','γ) Υλικά για εκτυπώσεις'], c:1},
+            {q:'Ποια ενότητα εξετάζει τα ψηφιακά μέσα ως μέσα πρακτικής γραμματισμού;', a:['α) 3.3','β) 3.4','γ) 3.6'], c:1},
+            {q:'Η έννοια του «text participant» στο μοντέλο των τεσσάρων πόρων περιγράφει:', a:['α) Την κριτική ανάλυση','β) Τη σημασιολογική κατανόηση και σύνδεση με εμπειρίες','γ) Την αποκωδικοποίηση αλφαβήτου'], c:1},
+            {q:'Τι απαιτεί η ανάγνωση πολυτροπικών κειμένων σύμφωνα με τον Kress;', a:['α) Μόνο καλή ορθογραφία','β) Κατανόηση των γραμματικών κανόνων εικόνας και ήχου','γ) Αποστήθιση λεξιλογίου'], c:1},
+            {q:'Ποια δεξιότητα αναπτύσσεται στο τρίτο πόρο για ψηφιακά κείμενα;', a:['α) Αποκωδικοποίηση πολυτροπικών συμβάσεων','β) Κατασκευή νοήματος','γ) Επιμέλεια και αξιολόγηση εργαλείων'], c:1},
+            {q:'Τι εννοείται με τον όρο «hybrid» κείμενο;', a:['α) Κείμενο μόνο με λέξεις','β) Συνδυασμός πολυτροπικών τρόπων ενιαία','γ) Μόνο γραφιστικά στοιχεία'], c:1},
+            {q:'Ποια ενότητα αναλύει παραδείγματα διδασκαλίας Γαλλικών;', a:['α) 3.3','β) 3.7','γ) 3.9'], c:0},
+            {q:'Στο ιδεολογικό μοντέλο, ο γραμματισμός θεωρείται:', a:['α) Ουδέτερη τεχνική δεξιότητα','β) Κοινωνική πρακτική με σχέσεις εξουσίας','γ) Ακαδημαϊκή θεωρία χωρίς εφαρμογή'], c:1},
+            {q:'Ποια δεξιότητα αφορά ο πληροφοριακός γραμματισμός;', a:['α) Κατανόηση εικόνων','β) Αξιολόγηση και σύνθεση πληροφοριών','γ) Χρήση emoticons'], c:1},
+            {q:'Τι χαρακτηρίζει την «Technologically Mediated Communication»;', a:['α) Χρήση μόνο κεφαλαίων γραμμάτων','β) Δικτυογλώσσα, emoticons, ακρωνύμια','γ) Παραδοσιακά έντυπα κείμενα'], c:1},
+            {q:'Το μοντέλο των τεσσάρων πόρων συνδυάζει ποια στοιχεία;', a:['α) Μόνο γλωσσικές γνώσεις','β) Γλώσσα, χρήση σε επικοινωνιακό πλαίσιο και κριτική ανάλυση','γ) Μόνο τεχνικές δεξιότητες'], c:1},
+            {q:'Ποια ενότητα συνοψίζει τα βασικά συμπεράσματα της ενότητας;', a:['α) 3.7','β) 3.9','γ) 3.5'], c:1},
+            {q:'Τι είναι η «multimodality»;', a:['α) Μόνο έντυπα κείμενα','β) Συνύπαρξη πολλαπλών modes (κείμενο, εικόνα, ήχος)','γ) Ενιαία γραφή'], c:1},
+            {q:'Ποιος πόρος ενθαρρύνει τη χρήση κειμένων ως εργαλεία παρουσίασης;', a:['α) Code breaker','β) Text participant','γ) Text user'], c:2},
+            {q:'Στο παράδειγμα με τους μύθους, ποιος πόρος αφορά την ανάλυση κοινών χαρακτηριστικών;', a:['α) Code breaker','β) Text analyst','γ) Text user'], c:1},
+            {q:'Ποιος όρος περιγράφει την ικανότητα κριτικής ερμηνείας ενός ψηφιακού κειμένου;', a:['α) Text user','β) Code breaker','γ) Text analyst'], c:2},
+            {q:'Η χρήση emoticons ανήκει σε ποια κατηγορία;', a:['α) Πληροφοριακός γραμματισμός','β) CMC (Technologically Mediated Communication)','γ) Πολυτροπικότητα'], c:1},
+            {q:'Ο όρος «multiliteracies» σχετίζεται με;', a:['α) Ενιαίο σχολικό πρότυπο','β) Πολλαπλούς γραμματισμούς και τεχνολογίες','γ) Μόνο αλφαβητισμό'], c:1},
+            {q:'Τι διδάσκει το «overt instruction» στους μαθητές;', a:['α) Κρυφές τεχνικές','β) Μεταγλώσσα για πολυτροπική ανάλυση','γ) Μόνο λεξιλόγιο'], c:1},
+            {q:'Ποια ενότητα αναφέρει τον Graff (1987);', a:['α) 3.1','β) 3.2','γ) 3.4'], c:0},
+            {q:'Τι σημαίνει «critical framing» στην παιδαγωγική πολυγραμματισμών;', a:['α) Χωρίς ανάλυση ιδεολογιών','β) Διδασκαλία θεμάτων χωρίς πλαίσιο','γ) Ανάλυση κοινωνικών–ιδεολογικών συνεπειών'], c:2},
+            {q:'Η έννοια των πολλαπλών γραμματισμών αμφισβητεί;', a:['α) Την αυθεντία ενός ενιαίου σχολικού γραμματισμού','β) Την ανάγκη οπτικού γραμματισμού','γ) Την ύπαρξη ψηφιακών μέσων'], c:0},
+            {q:'Το μοντέλο των τεσσάρων πόρων συμβάλλει κυρίως στην ανάπτυξη:', a:['α) Μηχανικής αποστήθισης','β) Κριτικού γραμματισμού','γ) Αποκλειστικά τεχνικών δεξιοτήτων'], c:1},
+            {q:'Ποια δραστηριότητα εντάσσεται στο «Situated Practice» στο παράδειγμα μύθων;', a:['α) Εξοικείωση με καθημερινά πολυτροπικά κείμενα','β) Υφολογική αναδόμηση κειμένου','γ) Εμφανής διδασκαλία'], c:0},
+            {q:'Ποιο στοιχείο ΔΕΝ είναι από τα «τρία χαρακτηριστικά νέας κειμενικότητας»;', a:['α) Πολυτροπικότητα','β) Γραμμικότητα','γ) Υπερκειμενικότητα'], c:1},
+            {q:'Η κριτική στάση απέναντι σε πλατφόρμες βασίζεται σε:', a:['α) Αποδοχή όλων των λειτουργιών','β) Συνειδητοποίηση ιδεολογικών κινήτρων και οικονομικών συμφερόντων','γ) Μόνο τεχνική αξιολόγηση'], c:1},
+            {q:'Η «αναδιαπραγμάτευση ταυτοτήτων» συνδέεται με ποια παιδαγωγική φάση;', a:['α) Situated Practice','β) Transformed Practice','γ) Overt Instruction'], c:1}
+        ];
+        let score=0, idx=0;
+        const container=document.getElementById('question-container');
+        function showQuestion(){
+            if(idx>=questions.length){
+                container.innerHTML=`<div class="final-score">Τέλος! Σκορ: ${score} / ${questions.length*2}</div>`;
+                return;
+            }
+            const {q,a} = questions[idx];
+            let html=`<div class="question"><span class="question-number">Ερώτηση ${idx+1}:</span>${q}</div>`;
+            a.forEach((opt,i)=>{ html+=`<button class="answer" data-index="${i}">${opt}</button>`; });
+            container.innerHTML=html;
+            document.querySelectorAll('.answer').forEach(btn=>btn.addEventListener('click',onAnswer));
+        }
+        function onAnswer(e){
+            const selected=+e.currentTarget.dataset.index;
+            const {c}=questions[idx];
+            const audio=selected===c?document.getElementById('successAudio'):document.getElementById('failAudio');
+            audio.play();
+            if(selected===c) score+=2;
+            document.getElementById('score').textContent=score;
+            document.querySelectorAll('.answer').forEach((btn,i)=>{ btn.disabled=true; if(i===c) btn.classList.add('correct'); else if(i===selected) btn.classList.add('incorrect'); });
+            idx++;
+            setTimeout(showQuestion,800);
+        }
+        showQuestion();
+    </script>
+</body>
+</html>
 
